# ESP-IDF-MPU6050

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
MPU6050/: CMakeLists.txt
MPU6050/examples/: CMakeLists.txt
MPU6050/examples/MPU6050_serial_read/: CMakeLists.txt  MPU6050_serial_read.c  README.md
MPU6050/examples/MPU6050_serial_read/main/: CMakeLists.txt  MPU6050_serial_read.c  idf_component.yml
MPU6050/src/: MPU6050.c  MPU6050.h
src/: MPU6050.c
